--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^4.6.0",
+    "jarallax": "^1.12.5",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1"
   }
