--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.6.0",
     "jarallax": "^1.12.5",
     "jquery": "^3.5.1",
+    "owl.carousel": "^2.3.4",
     "popper.js": "^1.16.1"
   }
 }
